# utf8proc-hs

./: Main.hs  Setup.hs  stack.yaml  utf8proc.cabal
src/Data/Text/: UTF8Proc.chs
